@@ -4777,3 +4777,5 @@
 	* net/net_poll.c: When readahead data is availalbe, the network poll
 	  logic should set POLLIN (or POLLRDNORM), not POLLOUT.  Max Holtzberg
 	  (2013-5-23)
+	* fs/fs_poll.c:  Actually, it should not ignore invlid descriptors, it
+	  should set the POLLNVAL event and return immediately (2013-5-23).
